--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
-.bus-banner{
+.bus-banner, .image-infront{
+  padding: auto;
+  padding-left: 300px;
+  margin-top: 20px;
+  background-image: none;
+}
+.offers-button{
   text-align: center;
+  padding: auto;
+  padding-left: 300px;
+  margin-top: 20px;
+  background-image: none;
+  border-color: greenyellow;
 }
